--- a/pom.xml
+++ b/pom.xml
@@ -256,10 +256,6 @@
                             <rules>
                                 <rule>
                                     <element>CLASS</element>
-                                    <excludes>
-                                        <exclude>**/Application</exclude>
-                                        <exclude>**/generated/**/*</exclude>
-                                    </excludes>
                                     <limits>
                                         <limit>
                                             <counter>LINE</counter>
@@ -269,6 +265,10 @@
                                     </limits>
                                 </rule>
                             </rules>
+                            <excludes>
+                                <exclude>**/Application*</exclude>
+                                <exclude>**/generated/**/*</exclude>
+                            </excludes>
                         </configuration>
                     </execution>
                 </executions>
