--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.mg.platform</groupId>
     <artifactId>sr-parent</artifactId>
-    <version>2.2-SNAPSHOT</version>
+    <version>2.6-SNAPSHOT</version>
     <description>This is SmartRent parent pom.</description>
     <packaging>pom</packaging>
 
@@ -198,7 +199,13 @@
                             <goal>verify</goal>
                         </goals>
                         <configuration>
+                            <skipTests>${skip.integration.tests}</skipTests>
+                            <parallel>none</parallel>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>${basedir}/target/classes</additionalClasspathElement>
+                            </additionalClasspathElements>
                             <includes>
+                                <include>**/ContractVerifierTest.java</include>
                                 <include>**/*ITest.java</include>
                                 <include>**/*ISpec.java</include>
                                 <include>**/*ISetup.java</include>
@@ -206,7 +213,6 @@
                                 <include>**/*ISpec.groovy</include>
                                 <include>**/*ISetup.groovy</include>
                             </includes>
-                            <skipTests>${skip.integration.tests}</skipTests>
                         </configuration>
                     </execution>
                 </executions>
